# VIC-RAGRENT

./: LICENSE  README.md  config.yaml  get_all_V-SZZ_repository.py  get_context_V-SZZ.py  main.py  pyproject.toml
core/: compute_cost.py  context_handler.py  cot_agent_review_system.py  data_loader.py  direct_agent_review_system.py  llm_query_client.py  metrics.py  multi_agent_review_system.py  prompt_builder.py  rag_db_handler.py  response_parser.py  session_handler.py
data/: 2025_2026_CVE.csv  V-SZZ_dataset.csv  role_defination.json
enums/: agent_type.py  audit_status.py  vulnerable_inspection_phase.py
models/: abs_model.py
models/impl/: commit_review_request.py  long_term_memory_model.py  role_definition.py  session_model.py
utils/: config_helper.py  definition_parser.py
