[project]
name = "VICRAGENT"
version = "0.1.0"
description = "Detecting Vulnerability-Inducing Commits via LLM-based Agents in Open-Source Ecosystems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.4",
    "distro==1.9.0",
    "filelock==3.20.0",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.35.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.2",
    "loguru==0.7.3",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "openai==1.99.9",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.18",
    "requests==2.32.5",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "triton==3.2.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.10.11",
]
